--- a/Hospital/Views/Doctor/Delete.cshtml
+++ b/Hospital/Views/Doctor/Delete.cshtml
@@ -82,7 +82,11 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            @{
+                string imageSrc = Model.Image == null ? "/images/Doctor.png" : $"data:image/jpeg;base64,{Convert.ToBase64String(Model.Image)}";
+                //tag that has the image with max width 50px
+            }
+            <img class="img-thumbnail" style="max-width : 100px" src=@imageSrc alt="Not Assigned" />
         </dd>
     </dl>
     
