--- a/Hospital/Views/Doctor/Details.cshtml
+++ b/Hospital/Views/Doctor/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Specialization)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Specialization.Id)
+            @Html.DisplayFor(model => model.Specialization.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Salary)
@@ -81,7 +81,11 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            @{
+                string imageSrc = Model.Image == null ? "/images/Doctor.png" : $"data:image/jpeg;base64,{Convert.ToBase64String(Model.Image)}";
+                //tag that has the image with max width 50px
+            }
+            <img class="img-thumbnail" style="max-width : 250px" src=@imageSrc alt="Not Assigned" />
         </dd>
     </dl>
 </div>
