--- a/Hospital/Views/Shared/_AuthLayout.cshtml
+++ b/Hospital/Views/Shared/_AuthLayout.cshtml
@@ -39,7 +39,7 @@
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	@await RenderSectionAsync("ValidationScriptSection", required: true) @*no view implementing AuthLayout will be rendered without checking the server-side validation*@
+	@await RenderSectionAsync("ValidationScriptSection", required: true) @*no view implementing AuthLayout will be rendered without checking the client-side validation*@
 
 
 </body>
