--- a/Hospital/Views/Account/Login.cshtml
+++ b/Hospital/Views/Account/Login.cshtml
@@ -1,8 +1,49 @@
-﻿
+﻿@using Hospital.ViewModels
+@model LoginViewModel
+
 @{
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
+<div asp-validation-summary="All" style="color:red" class="text-danger"></div>
+@*display all arrors if register doesn't succeed*@
 
-<h1>Login</h1>
 
+<div class="main-agileinfo">
+	<div class="agileits-top">
+
+
+		<form asp-action="Login" asp-controller="Account" method="post">
+
+			<input type="email" asp-for="Email" placeholder="Email" required="">
+			<span asp-validation-for="Email" style="color:red"></span>
+			<br />
+
+
+			@*type=Passowrd: to be hidden*@
+			<input type="Password" asp-for="Password" placeholder="Password" required="">
+			<span asp-validation-for="Password" style="color:red"></span>
+			<br />
+
+
+			<div class="wthree-text">
+				<label class="anim">
+					<input asp-for="RememberMe" class="checkbox" >
+					<span>Remember Me</span>
+				</label>
+				<div class="clear"> </div>
+			</div>
+
+
+
+			<input type="submit" value="LOGIN">
+		</form>
+		<p>Don't have an Account? <a asp-action="Register"> Register Now</a></p>
+
+	</div>
+</div>
+
+@section ValidationScriptSection
+{
+	<partial name="_ValidationScriptsPartial" />
+}
