--- a/Hospital/Views/Doctor/Index.cshtml
+++ b/Hospital/Views/Doctor/Index.cshtml
@@ -68,7 +68,7 @@
                 @Html.DisplayFor(modelItem => item.Salary)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName + item.LastName)
+                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
