--- a/Hospital/Views/Doctor/Index.cshtml
+++ b/Hospital/Views/Doctor/Index.cshtml
@@ -29,6 +29,9 @@
                 @Html.DisplayNameFor(model => model.Salary)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th>
                 Full Name
             </th>
             <th>
@@ -66,6 +69,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Salary)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
