--- a/Hospital/Views/Appointment/Edit.cshtml
+++ b/Hospital/Views/Appointment/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Appointment</h1>
+<h1>Edit</h1>
 
-<h4>Appointment Details</h4>
+<h4>Appointment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,49 +14,60 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
 
-            <!-- Doctor Selection -->
+            <!-- Doctor Info -->
             <div class="form-group">
-                <label asp-for="DoctorId" class="control-label"></label>
-                <select asp-for="DoctorId" class="form-control" asp-items="ViewBag.DoctorId"></select>
-                <span asp-validation-for="DoctorId" class="text-danger"></span>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Doctor)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Doctor.FirstName) @Html.DisplayFor(model => model.Doctor.LastName)
+                </dd>
+                <input type="hidden" asp-for="DoctorId" />
             </div>
 
-            <!-- Patient Selection -->
+            <!-- Patient Info -->
             <div class="form-group">
-                <label asp-for="PatientId" class="control-label"></label>
-                <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId"></select>
-                <span asp-validation-for="PatientId" class="text-danger"></span>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Patient)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Patient.FirstName) @Html.DisplayFor(model => model.Patient.LastName)
+                </dd>
+                <input type="hidden" asp-for="PatientId" />
             </div>
 
-            <!-- Specialization Field -->
+            <!-- Specialization (Read-Only) -->
             <div class="form-group">
-                <label asp-for="Specialization" class="control-label"></label>
-                <input asp-for="Specialization" class="form-control" />
-                <span asp-validation-for="Specialization" class="text-danger"></span>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Specialization)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Specialization)
+                </dd>
+                <input type="hidden" asp-for="Specialization" />
             </div>
 
-            <!-- Diagnosis Field -->
+            <!-- Diagnosis -->
             <div class="form-group">
                 <label asp-for="Diagnosis" class="control-label"></label>
                 <input asp-for="Diagnosis" class="form-control" />
                 <span asp-validation-for="Diagnosis" class="text-danger"></span>
             </div>
 
-            <!-- Treatment Field -->
+            <!-- Treatment -->
             <div class="form-group">
                 <label asp-for="Treatment" class="control-label"></label>
                 <input asp-for="Treatment" class="form-control" />
                 <span asp-validation-for="Treatment" class="text-danger"></span>
             </div>
 
-            <!-- Date Field -->
+            <!-- Date -->
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" type="datetime-local" />
+                <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
 
-            <!-- Submit Button -->
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
