--- a/Hospital/Views/Appointment/Create.cshtml
+++ b/Hospital/Views/Appointment/Create.cshtml
@@ -32,22 +32,33 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
+                <label asp-for="Specialization" class="control-label"></label>
+                <select id="Specialization" asp-for="Specialization" class="form-control" asp-items="ViewBag.Specialization">
+                    <option value="">-- Select Specialization --</option>
+                </select>
+                <span asp-validation-for="Specialization" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="DoctorId" class="control-label"></label>
-                <select asp-for="DoctorId" class="form-control" asp-items="ViewBag.DoctorId"></select>
+                <select asp-for="DoctorId" id="DoctorId" class="form-control">
+                    <option value="">-- Select Doctor --</option>
+                    <!-- Doctors will be populated dynamically here -->
+                </select>
                 <span asp-validation-for="DoctorId" class="text-danger"></span>
             </div>
 
+
             <div class="form-group">
                 <label asp-for="PatientId" class="control-label"></label>
-                <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId"></select>
+
+                <!-- Disabled select to show the patient name (read-only) -->
+                <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId" disabled></select>
+
+                <!-- Hidden field to store and submit the PatientId -->
+                <input type="hidden" asp-for="PatientId" />
+
                 <span asp-validation-for="PatientId" class="text-danger"></span>
-            </div>
-
-
-            <div class="form-group">
-                <label asp-for="Specialization" class="control-label"></label>
-                <input asp-for="Specialization" class="form-control" />
-                <span asp-validation-for="Specialization" class="text-danger"></span>
             </div>
 
            
@@ -69,7 +80,34 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#Specialization').change(function () {
+                var specialization = $(this).val();
+
+                // Clear the doctor dropdown
+                $('#DoctorId').empty();
+                $('#DoctorId').append('<option value="">-- Select Doctor --</option>');
+
+                if (specialization) {
+                    $.ajax({
+                        url: '@Url.Action("GetDoctorsBySpecialization")', // Controller action to fetch doctors
+                        type: 'GET',
+                        data: { specialization: specialization },
+                        success: function (data) {
+                            $.each(data, function (i, doctor) {
+                                $('#DoctorId').append($('<option>', {
+                                    value: doctor.id,
+                                    text: doctor.fullName
+                                }));
+                            });
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 }
+
+
