--- a/Hospital/Views/Appointment/Index.cshtml
+++ b/Hospital/Views/Appointment/Index.cshtml
@@ -14,7 +14,13 @@
 <p>
     <a asp-action="HistoryForPatient" asp-route-patientId="e105a10c-2289-41ad-94cb-472d0764c889">View Patient History</a>
 </p>
+<p>
+    <a asp-action="UpcomingAppointmentsForPatient" asp-route-patientId="e105a10c-2289-41ad-94cb-472d0764c889">View Patient Upcoming Appointments</a>
+</p>
 <p>  <a asp-action="HistoryForDoctor" asp-route-doctorId="D002">View Doctor History</a>
+</p>
+<p>
+    <a asp-action="UpcomingAppointmentsForDoctor" asp-route-doctorId="D002">View Doctor Upcoming Appointments</a>
 </p>
 <table class="table">
     <thead>
