--- a/Hospital/Views/Appointment/Create.cshtml
+++ b/Hospital/Views/Appointment/Create.cshtml
@@ -76,8 +76,8 @@
 
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
-
-                <div class="form-group">
+@*                 <input type="hidden" name="patientId" value="@Model.PatientId" />
+ *@                <div class="form-group">
                     <label asp-for="Specialization" class="control-label"></label>
                     <select id="Specialization" asp-for="Specialization" class="form-control" asp-items="ViewBag.Specialization">
                         <option value="">-- Select Specialization --</option>
@@ -227,4 +227,8 @@
             }
         });
     </script>
+}
+@section ValidationScriptSection
+{
+    <partial name="_ValidationScriptsPartial" />
 }
