--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
 
 
                         @using Microsoft.AspNetCore.Identity
+                        @using System.Security.Claims
                         @inject SignInManager<Person> SignInManager
                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
@@ -60,7 +61,29 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admins</a>
                             </li>
                         }
-                       
+
+                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Patient"))
+                        {
+                            //var userId = UserManager.GetUserId(User);
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="Create" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)">Make New ppointment</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="UpcomingAppointmentsForPatient" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)">Upcoming Appointments</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="HistoryForPatient" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)">Appointments history</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Details" asp-route-Id="@User.FindFirstValue(ClaimTypes.NameIdentifier)">Profile</a>
+                            </li>
+                            @* <li>
+                                <a asp-controller="Account" asp-action="Details" asp-route-id="@User.Identity.GetUserId()" class="btn btn-primary">View Profile</a>
+
+                            </li> *@
+                            
+                        }
+
 
                      @*    <li class="nav-item ">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
