update doc appointment

--- a/Hospital/Views/Appointment/UpcomingAppointmentsForDoctor.cshtml
+++ b/Hospital/Views/Appointment/UpcomingAppointmentsForDoctor.cshtml
@@ -25,6 +25,9 @@
                     <td>
                         <a asp-action="Details" asp-route-id="@appointment.Id">Details</a>
                     </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@appointment.Id">Edit</a>
+                    </td>
                 </tr>
             }
         }
